# balsam-eval

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .pylintrc  CONTRIBUTING.md  Dockerfile  README.md  UVREADME.MD  buckup_data.py  cloudbuild.yaml  entailment.json  full_export.sql  mteb_init.py  mypy.ini  pyproject.toml  requirements.txt  run.py  run_local.py  template_dataset.json  translation_transliteration.json  upload_results_script.py
.github/ISSUE_TEMPLATE/: Epic.md  User-Story.md
docs/: add_metric.md
src/: accuracy_score.py  accuracy_score_multiple_choice.py  adapter_utils.py  aixplain.py  aixplain_v1.py  anthropic_adapter.py  azure_stt_adapter.py  bleu_score.py  cohere_adapter.py  db_operations.py  evaluation.py  gemini_adapter.py  groq_adapter.py  helpers.py  humain_adapter.py  llm_as_a_judge.py  llm_as_a_judge_old.py  local_adapter.py  local_model.py  metric.py  metrics_combined.py  metrics_registry.py  multimodal_utils.py  openai_adapter.py  rouge_scorer.py  task.py  task_multiple_choice.py  task_v2.py  utils.py
src/adapters/: __init__.py  utils.py
src/adapters/asr/: __init__.py  google_stt.py  huggingface_asr.py  ibm_stt.py  nemo_asr.py  openai_asr.py  qwen_asr.py
src/adapters/chat/: __init__.py  anthropic.py  cohere.py  gemini.py  groq.py  local.py  openai.py
src/adapters/judge/: __init__.py
src/core/: common.py  config.py  helpers.py  multimodal_utils.py
src/llm_judger/: base_llm_judge.py  generative_llm_judge.py  mcq_llm_judge.py
src/metrics/: __init__.py  accuracy_metric.py  asr_utils.py  bleu_metric.py  cer_metric.py  llm_judge_metric.py  metrics_utils.py  new_metric.py  rouge_metric.py  wer_metric.py
src/metrics/impl/: new_metric.py
src/processors/: llm_judge_operations.py  result_processing.py  task_operations.py
