[project]
name = "balsam-lm-evaluation"
version = "0.1.0"
requires-python = ">=3.10,<4"
dependencies = [
    "lmms-eval[all]~=0.7.1",
    "pyyaml~=6.0.3",
    "google-cloud-storage>=2.7.0,<3.10.1",
    "six~=1.17.0",
    "nltk~=3.9.4",
    "pyarabic~=0.6.15",
    "deepeval~=3.9.9",
    "python-dotenv~=1.2.2",
    "google-genai~=1.73.1",
    "groq~=1.2.0",
    "absl-py~=2.4.0",
    "rouge-score~=0.1.2",
    "pillow~=12.2.0",
]

[dependency-groups]
dev = [
    "mypy~=1.20.2",
    "pylint[spelling]~=4.0.5",
    "types-pyyaml~=6.0.12.20260408",
    "types-tqdm~=4.67.3.20260408",
    "types-requests~=2.33.0.20260408",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = [".", "src/"]

[tool.coverage.run]
omit = ["__init__.py", "tests/*", "*/tests/*"]

[tool.coverage.report]
skip_empty = true

[tool.yapf]
based_on_style = "google"
indent_width = 4

[tool.yapfignore]
ignore_patterns = ["venv", "build", "dist"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

# Ignore external dependencies that don't have stubs
[[tool.mypy.overrides]]
module = [
    "google.cloud.*",
    "lmms_eval.*",
    "pyarabic.*",
    "evaluate.*",
]
ignore_missing_imports = true

[tool.pylint.master]
ignore = [".venv",".history",".mypy_cache","build","dist"]
